# lightwallet-protocol-rust

./: Cargo.toml  Makefile  README.md  build.rs
src/: lib.rs
walletrpc/: compact_formats.proto  service.proto
