[package]
name = "lightwallet-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Za Wil <zancas@zingolabs.com>"]
description = "Rust bindings for Zcash lightwallet protocol buffers"
license = "MIT"
repository = "https://github.com/zingolabs/lightwallet_protocols"

[dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14"

[lib]
name = "lightwallet_protocol"
path = "src/lib.rs"
